Show issues under the current cursor position.

--- a/stylesheets/dart-tools.less
+++ b/stylesheets/dart-tools.less
@@ -20,6 +20,12 @@
 
 }
 
+.dart-tools-quick-issue-view {
+  ul {
+    margin-bottom: none;
+  }
+}
+
 .dart-analysis-info {
   .region {
     border-bottom: 1px dotted fadeout(@text-color-info, 30%);
