--- a/stylesheets/dart-tools.less
+++ b/stylesheets/dart-tools.less
@@ -20,10 +20,8 @@
 
 }
 
-.dart-tools-quick-issue-view {
-  ul {
-    margin-bottom: none;
-  }
+ul.dart-tools-quick-issue-view {
+  margin-bottom: 0;  
 }
 
 .dart-analysis-info {
