Predefined search, viewing results.

--- a/stylesheets/dart-tools.less
+++ b/stylesheets/dart-tools.less
@@ -4,6 +4,11 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
+
+.dart-explorer {
+  overflow: scroll;
+}
+
 .dart-tools {
 }
 
@@ -21,7 +26,7 @@
 }
 
 ul.dart-tools-quick-issue-view {
-  margin-bottom: 0;  
+  margin-bottom: 0;
 }
 
 .dart-analysis-info {
