Show a spinner when querying analysis server.

--- a/stylesheets/dart-tools.less
+++ b/stylesheets/dart-tools.less
@@ -7,6 +7,13 @@
 
 .dart-explorer {
   overflow: scroll;
+
+  h2 .loading {
+    margin-left: 20px;
+    &.off {
+      visibility: hidden;
+    }
+  }
 }
 
 .dart-tools {
