Increase width of autocomplete.

--- a/stylesheets/dart-tools.less
+++ b/stylesheets/dart-tools.less
@@ -7,6 +7,10 @@
 .dart-tools {
 }
 
+.select-list.popover-list.dart-tools-autocomplete {
+  width: 30%;
+}
+
 .line-number {
   &.dart-analysis-info {
     color: @text-color-info;
@@ -21,7 +25,7 @@
 }
 
 ul.dart-tools-quick-issue-view {
-  margin-bottom: 0;  
+  margin-bottom: 0;
 }
 
 .dart-analysis-info {
