Clicking on an item in Analysis View navigates to it.
Closes #16

--- a/stylesheets/dart-tools.less
+++ b/stylesheets/dart-tools.less
@@ -12,6 +12,10 @@
 .dart-tools {
 }
 
+.dart-tools-analysis-tool-panel a {
+  color: inherit;
+}
+
 .select-list.popover-list.dart-tools-autocomplete {
   width: 30%;
 }
