New editor decorator.
It looks almost exactly like the old one.

--- a/styles/dart-tools.less
+++ b/styles/dart-tools.less
@@ -37,23 +37,23 @@ ul.dart-tools-quick-issue-view {
   margin-bottom: 0;
 }
 
-.dart-analysis-info {
-  .region {
-    border-bottom: 1px dotted fadeout(@text-color-info, 30%);
+atom-text-editor::shadow {
+  .dart-analysis-info {
+    .region {
+      border-bottom: 1px dotted fadeout(@text-color-info, 30%);
+    }
+
   }
-  // border-bottom-style: dotted;
-  // border-bottom-width: 1px;
-  // border-bottom-color: fadeout(@text-color-warning, 30%);
-}
-.dart-analysis-warning {
-  .region {
-    border-bottom: 1px dotted fadeout(@text-color-warning, 30%);
+  .dart-analysis-warning {
+    .region {
+      border-bottom: 1px dotted fadeout(@text-color-warning, 30%);
+    }
   }
-}
 
 
-.dart-analysis-error {
-  .region {
-    border-bottom: 1px dotted fadeout(@text-color-error, 30%);
+  .dart-analysis-error {
+    .region {
+      border-bottom: 1px dotted fadeout(@text-color-error, 30%);
+    }
   }
 }
