Add new quick info view.
Out with the old, in with the new that looks almost exactly like the
old.

--- a/styles/dart-tools.less
+++ b/styles/dart-tools.less
@@ -33,6 +33,19 @@
 
 }
 
+html /deep/ * {
+  .info[data-dart-analysis] {
+    color: @text-color-info;
+  }
+  .warning[data-dart-analysis] {
+    color: @text-color-warning;
+  }
+  .error[data-dart-analysis] {
+    color: @text-color-error;
+  }
+}
+
+
 ul.dart-tools-quick-issue-view {
   margin-bottom: 0;
 }
