CTRL+ALT+U: inspect element at cursor.
Basic prototype.

--- a/styles/dart-tools.less
+++ b/styles/dart-tools.less
@@ -138,3 +138,8 @@ atom-text-editor::shadow .gutter .line-number {
     }
   }
 }
+
+atom-text-editor::shadow .context-view-highlight .region {
+  border: 2px solid @text-color-info;
+  background: fade(@text-color-info, 30%);
+}
